src/test/ui/consts/min_const_fn/allow_const_fn_ptr.stderr
error: const-stable function cannot use `#[feature(const_fn_fn_ptr_basics)]`
  --> $DIR/allow_const_fn_ptr.rs:6:16
   |
LL | const fn error(_: fn()) {}
   |                ^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL | #[dustc_const_unstable(feature = "...", issue = "...")]
   |
help: otherwise `#[dustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL | #[dustc_allow_const_fn_unstable(const_fn_fn_ptr_basics)]
   |

error: aborting due to previous error

