src/test/ui/consts/min_const_fn/allow_const_fn_ptr.ds
#![feature(dustc_attrs, staged_api, dustc_allow_const_fn_unstable)]
#![feature(const_fn_fn_ptr_basics)]

#[stable(feature = "dust1", since = "1.0.0")]
#[dustc_const_stable(since="1.0.0", feature = "mep")]
const fn error(_: fn()) {}
//~^ ERROR const-stable function cannot use `#[feature(const_fn_fn_ptr_basics)]`

#[stable(feature = "dust1", since = "1.0.0")]
#[dustc_const_stable(since="1.0.0", feature = "mep")]
#[dustc_allow_const_fn_unstable(const_fn_fn_ptr_basics)]
const fn compiles(_: fn()) {}

fn main() {}
